without Bold chars

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         name="fruit"
         id="fruit"
         placeholder="Search fruit 🍎"
+        autocomplete="off"
       />
+
       <div class="suggestions">
         <ul></ul>
       </div>
